<resources>
    <string name="app_name">WeatherApp</string>
    <string name="app_chatgpt_name">ChatGPT</string>
    <string name="settings">Settings</string>
    <string name="flutter">Flutter</string>
    <string name="flutter2">Flutter2</string>
    <string name="flutter3">Flutter3</string>
    <string name="pokemon">Pokemon</string>
    <string name="viewpager">Viewpager</string>
    <string name="cameraX">CameraX</string>
    <string name="map">Map</string>
    <string name="video">Video</string>
    <string name="city_zipcode">City ZipCode</string>
    <string name="reload">重新加载</string>
    <string name="load_more">加载更多…</string>
    <string name="pokemon_list">宝可梦列表</string>

    <string name="stfErrorMessage">An error occurred please try again later</string>
    <string name="stfOfflineMessage">Please check your connection</string>
    <string name="stfLocationOffMessage">Please enable location services</string>
    <string name="stfEmptyMessage">There are no items</string>
    <string name="stfLoadingMessage">Loading..</string>
    <string name="stfButtonText">Retry</string>
    <string name="retry">点击重试</string>
    <string name="default_empty">这里什么都没有</string>
</resources>
