<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_flutter"
        android:orderInCategory="100"
        android:title="@string/flutter"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_flutter2"
        android:orderInCategory="100"
        android:title="@string/flutter2"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_flutter3"
        android:orderInCategory="100"
        android:title="@string/flutter3"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_pokemon"
        android:orderInCategory="100"
        android:title="@string/pokemon"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_viewpager"
        android:orderInCategory="100"
        android:title="@string/viewpager"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_camera"
        android:orderInCategory="100"
        android:title="@string/cameraX"
        app:showAsAction="never"/>
</menu>